# PP

./: CMakeLists.txt  README.md  check.py  main.cpp
data/: Avarage time  check.txt  firstMatrix_100.txt  firstMatrix_1000.txt  firstMatrix_250.txt  firstMatrix_500.txt  firstMatrix_750.txt  resultMatrix_100.txt  resultMatrix_250.txt  resultMatrix_500.txt  secondMatrix_100.txt  secondMatrix_1000.txt  secondMatrix_250.txt  secondMatrix_500.txt  secondMatrix_750.txt
